--- a/Samples/XamlMasterDetail/cs/project.json
+++ b/Samples/XamlMasterDetail/cs/project.json
@@ -1,9 +1,11 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "6.2.3",
+    "NETStandard.Library": "2.0.3",
+    "Newtonsoft.Json": "12.0.1"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0.17763": {}
   },
   "runtimes": {
     "win10-arm": {},
